--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
     "mongoose": "^6.5.1",
-    "next": "^12.2.3",
+    "next": "^12.2.4-canary.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
